# KifuAssembler

./: .gitignore  .travis.yml  Dockerfile  GLOBALS.py  LGSgfParser.py  Move.py  NodeTypes.py  Pipfile  UrlExtractor.py  cleanup.cmd  extractor.py  incorporator.py  main.py  minimal.json  pyproject.toml  readme.md  scrapy.cfg  setup.cmd  test_UrlExtractor.py  test_extractor.py  test_incorporator.py  test_lgSgfParser.py  test_parse.py  ubuntu_setup.sh  util.py  windows_setup.bat
KifuAssembler/: assemble.py  dir_to_json.py  incorporator.py  json_to_dir.py  json_to_tree.py
KifuAssembler/src/: assembler.py  data_types.py  extractor.py  incorporator.py  utils.py
KifuAssembler/tests/: test_LittleGolemToGogui_style.py  test_assembler.py  test_extractor.py  test_incorporator.py  test_symmetric.py
LittleGolemCralwer/: items.py  middlewares.py  pipelines.py  settings.py
LittleGolemCralwer/spiders/: LG.py  backup.py  config.py  expert.py  game.py  kifu.py  sgf.py
Scalpels/: GLOBALS.py  LGSgfParser.py  extractor.py  incorporator.py  main.py  util.py
lgSgfMerger/: GLOBALS.py  LGSgfParser.py  extractor.py  incorporator.py  main.py  util.py
miscellaneous/: boarder_training_data_builder.py  json_to_statistic.py  lg_uploader.py  lg_uploader_config.yml
resources/: sample_Lomaben.json  sample_expert.json  sample_expert_games.json  sample_game.json
results/: expert.json  game.json
results/expert_games/: Florian_Jamain.json  Hsu.json  T_O_C_H.json  givemesix.json  u2b.json  (+1 more)
samples/: Lomaben.json  expert.json
tests/: test_extractor.py  test_incorporator.py  test_parse.py
(+17 files in other folders)
