[tool.poetry]
name = "KifuAssembler"
version = "0.1.0"
description = ""
authors = ["Tzu-Yee <fdja1974.cs07g@nctu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "^1.8.0"
anytree = "^2.8.0"
pytest-cov = "^2.8.1"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
